--- a/FunciSNP/NAMESPACE
+++ b/FunciSNP/NAMESPACE
@@ -10,25 +10,17 @@ importFrom(VariantAnnotation, locateVariants)
 
 exportMethods(
     "AFR.D.prime<-", "AFR.D.prime",
-    "AFR.geno<-", "AFR.geno",
-    "AFR.overlapping.snps.geno<-", "AFR.overlapping.snps.geno",
     "AFR.p.value<-", "AFR.p.value",
     "AFR.R.squared<-", "AFR.R.squared",
     "ALL.D.prime<-", "ALL.D.prime",
-    "ALL.geno<-", "ALL.geno",
-    "ALL.overlapping.snps.geno<-", "ALL.overlapping.snps.geno",
+    "ALL.overlapping.snps.geno",
     "ALL.p.value<-", "ALL.p.value",
     "ALL.R.squared<-", "ALL.R.squared",
     "alt.allele<-", "alt.allele",
     "AMR.D.prime<-", "AMR.D.prime",
-    "AMR.geno<-", "AMR.geno",
-    "AMR.overlapping.snps.geno<-", "AMR.overlapping.snps.geno",
     "AMR.p.value<-", "AMR.p.value",
     "AMR.R.squared<-", "AMR.R.squared",
     "ASN.D.prime<-", "ASN.D.prime",
-    "ASN.geno<-", "ASN.geno",
-    "ASN.overlapping.snps.geno<-",
-    "ASN.overlapping.snps.geno",
     "ASN.p.value<-",
     "ASN.p.value",
     "ASN.R.squared<-",
@@ -41,10 +33,6 @@ exportMethods(
     "D.prime.corrsnps",
     "EUR.D.prime<-",
     "EUR.D.prime",
-    "EUR.geno<-",
-    "EUR.geno",
-    "EUR.overlapping.snps.geno<-",
-    "EUR.overlapping.snps.geno",
     "EUR.p.value<-",
     "EUR.p.value",
     "EUR.R.squared<-",
