--- a/FunciSNP/DESCRIPTION
+++ b/FunciSNP/DESCRIPTION
@@ -2,11 +2,11 @@ Package: FunciSNP
 Type: Package
 Title: The Functional Integration of SNPs with Phenotype by Coincidence
         with Chromatin Biofeatures
-Version: 0.1.6
+Version: 0.1.7
 Date: 2012-02-07
 Author: Simon G. Coetzee (scoetzee@gmail.com) and Houtan Noushmehr (houtana@gmail.com)
 Maintainer: Simon G. Coetzee <scoetzee@gmail.com>
-Depends: R (>= 2.14.0), Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1),
+Imports: Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1),
         GGtools (>= 4.0.0), methods, ChIPpeakAnno (>= 2.2.0), parallel,
         GenomicRanges, TxDb.Hsapiens.UCSC.hg19.knownGene,
         VariantAnnotation, plyr
