fixed heatmap plot, all codes are now at 80 character limit, edit some more of the vignette

--- a/FunciSNP/NAMESPACE
+++ b/FunciSNP/NAMESPACE
@@ -59,4 +59,4 @@ exportMethods(
 
 exportClasses(CorrelatedSNPs, TagSNP, TSList)
 
-export(FuncySNP, FunciSNPAnnotateSummary, FunciSNPplot, FunciSNPbed, FunciSNPtable, FunciSNPsummaryOverlaps, FunciSNPidsFromSummary)
+export(getFSNPs, FunciSNPAnnotateSummary, FunciSNPplot, FunciSNPbed, FunciSNPtable, FunciSNPsummaryOverlaps, FunciSNPidsFromSummary)
