--- a/FunciSNP/DESCRIPTION
+++ b/FunciSNP/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: The Functional Integration of SNPs with Phenotype by Coincidence with Chromatin Biofeatures
 Version: 0.1.8
 Date: 2012-02-13
-Author: Simon G. Coetzee (scoetzee NEAR gmail POINT com) and Houtan Noushmehr (houtana NEAR gmail POINT com)
+Author: Simon G. Coetzee (scoetzee NEAR gmail POINT com) and Houtan Noushmehr, PhD (houtana NEAR gmail POINT com)
 Maintainer: Simon G. Coetzee <scoetzee@gmail.com>
 biocViews: Infrastructure, DataRepresentation, DataImport, SequenceMatching, Annotation
 Depends: R (>= 2.14.0), Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1), GGtools (>= 4.0.0), methods, ChIPpeakAnno (>= 2.2.0), GenomicRanges, TxDb.Hsapiens.UCSC.hg19.knownGene, VariantAnnotation, plyr, org.Hs.eg.db, snpStats
