--- a/pre-FunciSNP/FuncSNPi/wip/FunciSNP.Rcheck/00_pkg_src/FunciSNP/DESCRIPTION
+++ b/pre-FunciSNP/FuncSNPi/wip/FunciSNP.Rcheck/00_pkg_src/FunciSNP/DESCRIPTION
@@ -4,7 +4,7 @@ Title: The Functional Integration of SNPs with Phenotype by Coincidence
         with Chromatin Biofeatures
 Version: 1.0.0
 Date: 2011-11-12
-Author: Simon G. Coetzee (scoetzee@gmail.com) and Houtan Noushmehr (houtana@gmail.com)
+Author: Simon G. Coetzee (scoetzee@gmail.com) and Houtan Noushmehr, PhD (houtana@gmail.com)
 Maintainer: Simon G. Coetzee <scoetzee@gmail.com>
 Depends: R (>= 2.14.0), Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1),
         GGtools (>= 4.0.0)
