added option built.in.biofeatures, compressed extdata, moved builtInFeatres, cleaned up code (still needs some work)

--- a/FunciSNP/NAMESPACE
+++ b/FunciSNP/NAMESPACE
@@ -11,34 +11,13 @@ importFrom(VariantAnnotation, locateVariants)
 import(org.Hs.eg.db)
 
 exportMethods(
-    "AFR.D.prime<-", "AFR.D.prime",
-    "AFR.p.value<-", "AFR.p.value",
-    "AFR.R.squared<-", "AFR.R.squared",
-    "ALL.D.prime<-", "ALL.D.prime",
-    "ALL.overlapping.snps.geno",
-    "ALL.p.value<-", "ALL.p.value",
-    "ALL.R.squared<-", "ALL.R.squared",
     "alt.allele<-", "alt.allele",
-    "AMR.D.prime<-", "AMR.D.prime",
-    "AMR.p.value<-", "AMR.p.value",
-    "AMR.R.squared<-", "AMR.R.squared",
-    "ASN.D.prime<-", "ASN.D.prime",
-    "ASN.p.value<-",
-    "ASN.p.value",
-    "ASN.R.squared<-",
-    "ASN.R.squared",
     "chr<-",
     "chr",
     "correlated.snps<-",
     "correlated.snps",
-    "D.prime.corrsnps<-",
-    "D.prime.corrsnps",
-    "EUR.D.prime<-",
-    "EUR.D.prime",
-    "EUR.p.value<-",
-    "EUR.p.value",
-    "EUR.R.squared<-",
-    "EUR.R.squared",
+    "yafsnp.dprime<-",
+    "yafsnp.dprime",
     "genotype<-",
     "genotype",
     "pop.genotype",
@@ -51,8 +30,10 @@ exportMethods(
     "position",
     "ref.allele<-",
     "ref.allele",
-    "R.squared.corrsnps<-",
-    "R.squared.corrsnps",
+    "yafsnp.rsq<-",
+    "yafsnp.rsq",
+    "yafsnp.pvalue",
+    "yafsnp.pvalue<-",
     "snpid<-",
     "snpid"
 )
