--- a/FunciSNP/DESCRIPTION
+++ b/FunciSNP/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: FunciSNP
 Type: Package
 Title: The Functional Integration of SNPs with Phenotype by Coincidence with Chromatin Biofeatures
-Version: 0.1.8
+Version: 0.1.10
 Date: 2012-02-13
-Author: Simon G. Coetzee (scoetzee NEAR gmail POINT com) and Houtan Noushmehr, PhD (houtana NEAR gmail POINT com)
-Maintainer: Simon G. Coetzee <scoetzee@gmail.com>
+Author: Simon G. Coetzee (simon NEAR simoncoetzee POINT com) and Houtan Noushmehr, PhD (houtana NEAR gmail POINT com)
+Maintainer: Simon G. Coetzee <simon@simoncoetzee.com>
 biocViews: Infrastructure, DataRepresentation, DataImport, SequenceMatching, Annotation
 Depends: R (>= 2.14.0), Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1), GGtools (>= 4.0.0), methods, ChIPpeakAnno (>= 2.2.0), GenomicRanges, TxDb.Hsapiens.UCSC.hg19.knownGene, VariantAnnotation, plyr, org.Hs.eg.db, snpStats
 Imports: IRanges, AnnotationDbi
@@ -13,4 +13,4 @@ Enhances: parallel
 Description: FunciSNP integrates information from GWAS, 1000genomes and chromatin feature to identify functional SNP in coding or non-coding regions. 
 License: GPL-3
 LazyLoad: yes
-Packaged: 2012-02-03 10:29:59 UTC; houtan
+Packaged: 2012-02-03 10:29:59 UTC
