--- a/FunciSNP/DESCRIPTION
+++ b/FunciSNP/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: FunciSNP
 Type: Package
-Title: The Functional Integration of SNPs with Phenotype by Coincidence with Chromatin Biofeatures
+Title: Integrating Functional Non-coding Datasets with Genetic Association Studies to Identify Candidate Regulatory SNPs
 Version: 0.2.0
-Date: 2012-05-16
-Author: Simon G. Coetzee (simon@simoncoetzee.com) and Houtan Noushmehr, PhD (houtana@gmail.com)
+Date: 2012-05-18
+Author: Simon G. Coetzee <simon@simoncoetzee.com> and Houtan Noushmehr, PhD <houtan@usp.br>
 Maintainer: Simon G. Coetzee <simon@simoncoetzee.com>
 biocViews: Infrastructure, DataRepresentation, DataImport, SequenceMatching, Annotation
 Depends: R (>= 2.14.0), ggplot2, TxDb.Hsapiens.UCSC.hg19.knownGene
@@ -11,5 +11,6 @@ Imports: AnnotationDbi, IRanges, Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1), m
 Enhances: parallel
 Description: FunciSNP integrates information from GWAS, 1000genomes and chromatin feature to identify functional SNP in coding or non-coding regions. 
 License: GPL-3
+URL: http://coetzeeseq.usc.edu/publication/Coetzee_SG_et_al_2012/
 LazyData: yes
-Packaged: 2012-02-03 10:29:59 UTC
+Packaged: 2012-05-18 10:29:59 UTC
