modified funciSNP to use funciSNP.data, added rda files to funciSNP.data, rearranged package layout

--- a/FunciSNP/NAMESPACE
+++ b/FunciSNP/NAMESPACE
@@ -12,6 +12,7 @@ import(ggplot2)
 importFrom(VariantAnnotation, locateVariants, AllVariants)
 importFrom(reshape, melt.data.frame, melt.array, melt.list, melt)
 import(scales)
+import(FunciSNP.data)
 
 exportMethods(
     "alt.allele<-", "alt.allele",
